--- a/package.json
+++ b/package.json
@@ -20,12 +20,27 @@
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
-    "@ionic-native/core": "5.0.0-beta.15",
-    "@ionic-native/splash-screen": "5.0.0-beta.15",
-    "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "4.0.0-beta.7",
+    "@ionic-native/core": "5.0.0-beta.20",
+    "@ionic-native/geolocation": "^5.0.0-beta.20",
+    "@ionic-native/splash-screen": "5.0.0-beta.20",
+    "@ionic-native/status-bar": "5.0.0-beta.20",
+    "@ionic/angular": "4.0.0-beta.11",
     "@ionic/pro": "2.0.3",
+    "@ionic/storage": "^2.2.0",
+    "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-ionic": "^5.2.4",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.3",
+    "kws-weather-widgets": "0.0.9",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
@@ -56,5 +71,32 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-ionic": {
+        "APP_ID": "1ec81629",
+        "CHANNEL_NAME": "Master",
+        "UPDATE_METHOD": "auto",
+        "UPDATE_API": "https://api.ionicjs.com",
+        "MAX_STORE": "2",
+        "MIN_BACKGROUND_DURATION": "30"
+      },
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To determine the location for which to get weather data"
+      }
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
+  }
 }
